--- a/TS/index.html
+++ b/TS/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <!-- <script src="js/bootstrap.js"></script> -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 </head>
-<body>
+<body onload="setLabels();">
     <div class="container">
 		<h1>Transcription</h1>
 
@@ -27,18 +28,65 @@
                 </video>
 
                 <div class="row" id="controls">
-                    <button onclick="rewind();" title="Rewind" id="re"><i class="fas fa-undo fa-sm"></i> F3</button>
-                    <button onclick="slowDown();" title="Slow down" id="sl"><i class="fas fa-backward fa-sm fa-sm"></i> F1</button>
-                    <button onclick="playVideo();" title="Play/Pause" id="pp"><i class="fas fa-pause-circle" id="pausePlay"></i> ESC</button>
-                    <button onclick="speedUp();" title="Speed up" id="su"><i class="fas fa-forward fa-sm"></i> F2</button>
-                    <button onclick="forward();" title="Forward" id="fw"><i class="fas fa-redo fa-sm"></i> F4</button>
+                    <button onclick="rewind();" title="Rewind" id="re"><i class="fas fa-undo fa-sm"></i> </button>
+                    <button onclick="slowDown();" title="Slow down" id="sl"><i class="fas fa-backward fa-sm fa-sm"></i></button>
+                    <button onclick="playVideo();" title="Play/Pause" id="pp"><i class="fas fa-pause-circle" id="pausePlay"></i></button>
+                    <button onclick="speedUp();" title="Speed up" id="su"><i class="fas fa-forward fa-sm"></i></button>
+                    <button onclick="forward();" title="Forward" id="fw"><i class="fas fa-redo fa-sm"></i></button>
                 </div>
 			</div>
+            <div>
+                <button type="button" class="btn btn-info btn-lg" id="myBtn"><i class="fas fa-cog fa-sm"></i></button>
+            </div>  
 			
         </div>
 
 	</div>
+
+
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
     
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Settings</h4>
+        </div>
+        <div class="modal-body">
+                <p id="message">Press a button to change...</p>
+                <div class="modal-div row">      
+                    <button onclick="manejarBotonesModal('re')" title="Rewind" id="md-re"><i class="fas fa-undo fa-sm"></i></button>
+                    <p id="p-re"></p>
+                </div>
+                <div class="modal-div row">    
+                    <button onclick="manejarBotonesModal('sl')" title="Slow down" id="md-sl"><i class="fas fa-backward fa-sm fa-sm"></i></button>
+                    <p id="p-sl"></p>
+                </div>
+                <div class="modal-div row">    
+                    <button onclick="manejarBotonesModal('pp')" title="Play/Pause" id="md-pp"><i class="fas fa-pause-circle" id="pausePlay"></i></button>
+                    <p id="p-pp"></p>
+                </div>
+                <div class="modal-div row">    
+                    <button onclick="manejarBotonesModal('su')" title="Speed up" id="md-su"><i class="fas fa-forward fa-sm"></i></button>
+                    <p id="p-su"></p>
+                </div>
+                <div class="modal-div row">    
+                    <button onclick="manejarBotonesModal('fw')" title="Forward" id="md-fw"><i class="fas fa-redo fa-sm"></i></button>
+                    <p id="p-fw"></p>
+                </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+
+
+
 </body>
 <script src="js/file.js"></script>
 </html>
